@@ -1,7 +1,6 @@
 v1.1
 	last.fm support
 	use plchanges to keep track of the playlist (faster)
-	post drag selection..
 	ability to 'save all' for tag editing? shortcut or button?
 
 Future:
